# counting-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  dependabot-merge.yaml  docker-publish.yaml  docker-publish.yml
counting/: __main__.py  bot.py  embed.py
counting/cogs/: admin.py  counting.py  default.py
counting/db/: guild.py
kazoeru/: __init__.py  __main__.py  bot.py  config.py  constants.py  embed.py
kazoeru/cogs/: admin.py  counting.py  default.py
kazoeru/db/: __init__.py  guild.py  models.py
